SERVER-23749 pessimizing move